# microsys

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cpu/: CMakeLists.txt
cpu/rtl/: microaddr.sv  microaddr_counter.sv  microaddr_types.sv
cpu/sim/: register_file_test.cpp  sim_cpu.cpp
data/: hedgehog.mem  hedgehog_palette.mem  letter_f.mem  saucer.mem
rtl/: cpu.sv  debounce.sv  display_timings_480p.sv  pll.sv  ram.sv  rom_async.sv  simple_display_timings_480p.sv  sprite.sv  top.sv  vga.sv
rtl/cpu/: alu.sv  constants.sv  controlsimple.sv  cpu.sv  decode.sv  pc_unit.sv  reg16_8.sv
rtl/tb/: .gitignore  Makefile  alu_op.txt
rtl/tb/cpu/: alu_tb.sv  cpu_tb.sv  reg16_8_tb.sv
sim/: sim_main.cpp
src/: microsys.json
src/comdiv/: comdiv.asm
src/test/: test.asm
tools/: as01.py  sim01.py
